feat: racer service & controller
